--- a/chat.html
+++ b/chat.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AInjera</title>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="icon" type="image/x-icon" href="/img/icons8-chatbot-32.png">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
    
 </head>
 
