--- a/chat.html
+++ b/chat.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AInjera</title>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
    
 </head>
 
 <body>
    
     <div class="area">
-        <div class="chat-head"></div>
-        <div class="typewriter" id="typewriter"></div>
+        <div class="chat-head"><img src="img/chatbot32.png" alt=""></div>
+        <div class="typewriter" id="typewriter"><span id="from">AInjera:</span> </div>
     </div>
     <div class="control">
             <input type="text" placeholder="🤖 Ask me anything...">
