--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="icon" type="image/x-icon" href="/img/icons8-chatbot-32.png">
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     <script src="dist/jquery-3.6.4.min.js"></script>
     <title>AInjera</title>
     
 </head>
 <body>
     <div class="title">
-       <img src="img/icons8-chatbot-94.png" alt=""> <h1>AInjera.</h1>
+       <img src="img/chatbot94.png" alt=""> <h1>AInjera.</h1>
     </div>
     <div class="container">
         
