--- a/chat.html
+++ b/chat.html
@@ -13,7 +13,7 @@
 <body>
    
     <div class="area">
-        <div class="chat-head"><img src="img/chatbot32.png" alt=""></div>
+        <div class="chat-head"><img src="img/chatbot94.png" alt="AInjera"></div>
         <div class="typewriter" id="typewriter"><span id="from">AInjera:</span> </div>
     </div>
     <div class="control">
