--- a/chat.html
+++ b/chat.html
@@ -4,22 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AInjera</title>
+    <title>Chat AInjera</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
    
 </head>
 
 <body>
-   
+   <div class="cont">
     <div class="area">
-        <div class="chat-head"><img src="img/chatbot94.png" alt="AInjera"></div>
+        <div class="chat-head"><a href="index.html"><img src="img/chatbot94.png" alt="AInjera"></a></div>
         <div class="typewriter" id="typewriter"><span id="from">AInjera:</span> </div>
+       
 
     </div>
     <div class="control">
             <input type="text" placeholder="🤖 Ask me anything...">
         </div>
+    </div>
 </body> 
 <script src="dist/jquery-3.6.4.min.js"></script>
     <script src="script.js"></script>
