--- a/chat.html
+++ b/chat.html
@@ -11,17 +11,15 @@
 </head>
 
 <body>
-   <div class="cont">
+   <section class="cont">
     <div class="area">
         <div class="chat-head"><a href="index.html"><img src="img/chatbot94.png" alt="AInjera"></a></div>
-        <div class="typewriter" id="typewriter"><span id="from">AInjera:</span> </div>
-       
-
+        <div class="typewriter" id="typewriter"><span id="from">AInjera:</span> Hello, What's your name? <h4 class="response" id="response"></h4> </div>
     </div>
     <div class="control">
-            <input type="text" placeholder="🤖 Ask me anything...">
+            <input id="input-name" type="text"> <button class="submit" id="submit-name"><img src="img/send48.png" alt=""></button>
         </div>
-    </div>
+   </section>
 </body> 
 <script src="dist/jquery-3.6.4.min.js"></script>
     <script src="script.js"></script>
