--- a/chat.html
+++ b/chat.html
@@ -14,7 +14,7 @@
    <section class="cont">
     <div class="area">
         <div class="chat-head"><a href="index.html"><img src="img/chatbot94.png" alt="AInjera"></a></div>
-        <div class="typewriter" id="typewriter"><span id="from">AInjera:</span> Hi, I'm friendly chatbot that helps you learn and create. <span style="text-decoration: none; color: #0c090d;">What's your name?</span>  <h4 class="response" id="response"></h4> </div>
+        <div class="typewriter" id="typewriter"><span id="from">AInjera:</span> Hi, I'm friendly chatbot that helps you learn and create. <span>What's your name?</span>  <h4 class="response" id="response"></h4> </div>
     </div>
     <div class="control">
             <input id="input-name" type="text"> <button class="submit" id="submit-name"><img src="img/send48.png" alt=""></button>
