--- a/chat.html
+++ b/chat.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="AInjera Chatbot is the best chatbot service for your business. It offers unlimited conversation, advanced analytics, chatbot customization, and API integrations. Try it for free today.">
+    <meta name="keywords" content="AInjera Chatbot, chatbot service, chatbot customization, chatbot analytics, chatbot integrations">
     <title>Chat AInjera</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
